@@ -1,0 +1,28 @@
+<?php
+/**
+ * Example Class1
+ *
+ * Long description text...
+ *
+ * @author  FooBar
+ * @version 1.0
+ */
+abstract class class1 implements Countable
+{
+    /**
+     * Misc array of data
+     * @var array
+     */
+    private $_misc_data = array('key1' => 'val1',
+                                'key2' => 'val2');
+    
+    /**
+     * Return the count of $_misc_data
+     *
+     * @return integer
+     */
+    public function count()
+    {
+        return count($this->_misc_data);
+    }
+}
