@@ -1,5 +1,9 @@
 #VERSION 0.9.0#
 
+ - fixed minor trim problem of method getClassDeclaration() in Peak_Zreflection
+
+ - modified getClassDocTags() of Peak_Zreflection to return array instead of object
+
  - added methods getParentMethods(), getSelfMethods(), getParentProperties() and getSelfProperties() to Peak_Zreflection
 
  - fixed method paramsToArray() from Peak_Zreflection
@@ -39,7 +43,6 @@
  - added abstract method render() and output() to Peak_View_Render
 
  - deleted deprecated file boot.php. Use Peak_Core::init() instead
-
 
 #VERSION 0.8.7#
 
